creusot/tests/should_fail/terminates/recursion_through_contract.stderr
error: Mutually recursive functions: when calling `with_proof_assert`...
  --> recursion_through_contract.rs:6:1
   |
6  | fn with_proof_assert(x: Int) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: then `with_proof_assert` calls `f1`...
  --> recursion_through_contract.rs:8:14
   |
8  |         x == f1()
   |              ^^^^
note: finally `f1` calls `with_proof_assert`.
  --> recursion_through_contract.rs:14:5
   |
14 |     with_proof_assert(5);
   |     ^^^^^^^^^^^^^^^^^^^^

error: Mutually recursive functions: when calling `with_requires`...
  --> recursion_through_contract.rs:20:1
   |
20 | fn with_requires(x: Int) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: then `with_requires` calls `f2`...
  --> recursion_through_contract.rs:19:17
   |
19 | #[requires(x == f2())]
   |                 ^^^^
note: finally `f2` calls `with_requires`.
  --> recursion_through_contract.rs:24:5
   |
24 |     with_requires(5);
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

